Fix issues. * Fix to rename x86_64-linux to x86_64-linux-openssl-fips. * Change before_install to install.

--- a/.travis.yml
+++ b/.travis.yml
@@ -392,7 +392,7 @@ matrix:
     - <<: *CALL_THREADED_CODE
     - <<: *NO_THREADED_CODE
     - name: x86_64-linux-openssl-fips
-      <<: *x86_64-linux
+      <<: *gcc-8
       env:
         - "OPENSSL_FIPS_VERSION=2.0.16"
         # OpenSSL 1.0.2 is the latest version supporting openssl-fips.
@@ -405,13 +405,15 @@ matrix:
         - "LDFLAGS=-L$OPENSSL_DIR/lib"
         - "LD_LIBRARY_PATH=$OPENSSL_DIR/lib"
         - "PKG_CONFIG_PATH=$OPENSSL_DIR/lib/pkgconfig"
-      before_install:
+      install:
+        # Install openssl-fips
         - "curl -sL -O https://www.openssl.org/source/openssl-fips-$OPENSSL_FIPS_VERSION.tar.gz"
         - "tar xzf openssl-fips-$OPENSSL_FIPS_VERSION.tar.gz"
         - "pushd openssl-fips-$OPENSSL_FIPS_VERSION"
         - "./config --prefix=$OPENSSL_FIPS_DIR"
         - "make -s && make install"
         - "popd"
+        # Install openssl with the installed openssl-fips.
         - "curl -sL -O https://www.openssl.org/source/openssl-$OPENSSL_VERSION.tar.gz"
         - "tar xzf openssl-$OPENSSL_VERSION.tar.gz"
         - "pushd openssl-$OPENSSL_VERSION"
