Make the logs more quiet.
To avoid an error:
"The job exceeded the maximum log length, and has been terminated.".

--- a/tool/ci/Dockerfile
+++ b/tool/ci/Dockerfile
@@ -6,8 +6,8 @@ COPY . .
 
 # Set the DEBIAN_FRONTEND to install tzdata.
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get -y update \
-  && apt-get -yq --no-install-suggests --no-install-recommends install \
+RUN (apt-get -y -qq update \
+  && apt-get -y -qq --no-install-suggests --no-install-recommends install \
   autoconf \
   bison \
   build-essential \
@@ -23,9 +23,9 @@ RUN apt-get -y update \
   ruby \
   tzdata \
   zlib1g-dev \
-  && apt-get -y upgrade \
-  && apt-get -y autoremove \
-  && apt-get -y clean
+  && apt-get -y -qq upgrade \
+  && apt-get -y -qq autoremove \
+  && apt-get -y -qq clean) > /dev/null
 # Set a time zone to pass the test.
 # RUN ln -snf /usr/share/zoneinfo/Japan /etc/localtime
 # RUN dpkg-reconfigure --frontend noninteractive tzdata
