--- a/.travis.yml
+++ b/.travis.yml
@@ -313,6 +313,12 @@ env:
       - BASE_IMAGE=arm32v7/ubuntu
     <<: *test-in-container
 
+  - &s390x-linux
+    name: s390x-linux
+    env:
+      - BASE_IMAGE=s390x/ubuntu
+    <<: *test-in-container
+
   - &pedanticism
     name: -std=c99 -pedantic
     compiler: clang
@@ -402,9 +408,11 @@ matrix:
   include:
     # Build every commit:
     # - <<: *x86_64-linux
-    - <<: *i686-linux
+    # - <<: *i686-linux
     - <<: *x86_64-linux-container
-    # - <<: *arm64-linux
+    - <<: *arm64-linux
+    - <<: *arm32-linux
+    - <<: *s390x-linux
     # - <<: *pedanticism
     # - <<: *assertions
     # - <<: *baseruby
