Add ccache deb package.

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,7 @@ env:
       - |-
         ${BEFORE_INSTALL}
         tool/travis_retry.sh sudo -E apt-get $travis_apt_get_options install \
+          ccache \
           gcc-8 \
           g++-8 \
           libffi-dev \
