dpkg --add-architecture armhf

--- a/.travis.yml
+++ b/.travis.yml
@@ -295,6 +295,8 @@ env:
       - debugflags=-g0
       - SETARCH='setarch armhf --verbose --3gb'
     before_install:
+      - uname -a
+      - dpkg --add-architecture armhf
       - tool/travis_retry.sh sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
       - tool/travis_retry.sh sudo bash -c "rm -rf '${TRAVIS_ROOT}/var/lib/apt/lists/'* && exec apt-get update -yq"
       - |-
