--- a/.travis.yml
+++ b/.travis.yml
@@ -299,7 +299,7 @@ env:
       - sudo dpkg --add-architecture armhf
       - tool/travis_retry.sh sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
       # - tool/travis_retry.sh sudo bash -c "rm -rf '${TRAVIS_ROOT}/var/lib/apt/lists/'* && exec apt-get update -yq"
-      - ls -1 "${TRAVIS_ROOT}/var/lib/apt/lists/*"
+      - ls -1 "${TRAVIS_ROOT}/var/lib/apt/lists/"
       - tool/travis_retry.sh sudo exec apt-get update -yq
       - |-
         tool/travis_retry.sh sudo -E apt-get $travis_apt_get_options install \
