--- a/.travis.yml
+++ b/.travis.yml
@@ -454,18 +454,21 @@ before_script:
   - mv ../config_2nd ~
   - chmod u-w ..
   - $SETARCH make -s $JOBS
+  # Debugging "Permission denied" failure on arm64.
+  # https://travis-ci.org/ruby/ruby/jobs/606916890#L2412
   - |-
-    date; : # Debugging "Permission defined" failure on darwin like https://travis-ci.org/ruby/ruby/jobs/508683759
+    status=0
     if ! make install; then
-      if [ "$(uname)" = Darwin ]; then
-        # Debugging "Permission defined" failure on darwin like https://travis-ci.org/ruby/ruby/jobs/508683759
-        set -x
-        date
-        ./miniruby -e 'ARGV.map{|path|[path,File.stat(path)]}.sort_by{|path,st|st.mtime}.each{|path,st|p mtime:st.mtime.to_f, ctime:st.ctime.to_f, path:path}' .ext/.timestamp/.RUBYCOMMONDIR*time .ext/common/bigdecimal/*.rb ../ext/bigdecimal/lib/bigdecimal/*.rb . .. .ext .ext/common .ext/common/bigdecimal ext/bigdecimal ../ext ../ext/bigdecimal ../ext/bigdecimal/lib ../ext/bigdecimal/lib/bigdecimal
-        make COPY='cp -f' install
-      else
-        exit 1
-      fi
+      status=1
+    fi
+    date
+    id
+    stat .ext/common
+    ./miniruby -e 'ARGV.map { |path| [path, File.stat(path)] }.sort_by { |path, st| st.mtime }.each { |path, st| p mtime:st.mtime.to_f, ctime:st.ctime.to_f, mode:sprintf("%o", st.mode), uid:st.uid, gid:st.gid, path:path }' \
+      .ext/common .ext/common/*.rb
+    if [ "$status" -ne 0 ]; then
+      make COPY='cp -f' install
+      false
     fi
   - ccache --show-stats
   - |-
