--- a/.travis.yml
+++ b/.travis.yml
@@ -270,7 +270,7 @@ env:
       - GCC_FLAGS=-m32
       - CXX='g++-8 -m32'
       - debugflags=-g0
-      - JOBS=
+      # - JOBS=
       - SETARCH='setarch i686 --verbose --3gb'
     # # Not using addon to control retries
     # addons:
@@ -469,8 +469,8 @@ before_script:
   - $SETARCH make -s $JOBS
   # Check if the .RUBYCOMMONDIR.time file is older than .ext/common/*.rb files.
   # Otherwise it causes "Permission defined" error in "make install".
-  - ls -rt $(pwd)/.ext/.timestamp/.RUBYCOMMONDIR.time $(pwd)/.ext/common/*.rb
-  - test "$(ls -rt .ext/.timestamp/.RUBYCOMMONDIR.time .ext/common/*.rb | head -1)" = ".ext/.timestamp/.RUBYCOMMONDIR.time"
+  - ls -rt --full-time $(pwd)/.ext/.timestamp/.RUBYCOMMONDIR.time $(pwd)/.ext/common/*.rb
+  # - test "$(ls -rt .ext/.timestamp/.RUBYCOMMONDIR.time .ext/common/*.rb | head -1)" = ".ext/.timestamp/.RUBYCOMMONDIR.time"
   - date; make install
   - ccache --show-stats
   - |-
