--- a/.travis.yml
+++ b/.travis.yml
@@ -538,7 +538,7 @@ script:
   - ip link
   - $RUBY_PREFIX/bin/ruby -v
   - strace -f $RUBY_PREFIX/bin/ruby -r 'socket.so' -e 'Socket.ip_address_list'
-  - strace -f $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_spec.rb:7"
+  - strace -f $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_debug_spec.rb"
   - strace -f $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_spec.rb"
   - $SETARCH make -s -o showflags leaked-globals
 
