Run it without strace.

--- a/.travis.yml
+++ b/.travis.yml
@@ -537,9 +537,12 @@ script:
   - ip r
   - ip link
   - $RUBY_PREFIX/bin/ruby -v
-  - strace -f $RUBY_PREFIX/bin/ruby -r 'socket.so' -e 'Socket.ip_address_list'
+  # OK
+  - $RUBY_PREFIX/bin/ruby -r 'socket.so' -e 'Socket.ip_address_list'
+  # OK
   - $RUBY_PREFIX/bin/ruby ../spec/ruby/library/socket/socket/udp_server_loop_debug2_spec.rb
-  # - strace -f $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_debug_spec.rb"
+  # Error
+  - $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_debug_spec.rb"
   # - strace -f $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_spec.rb"
   - $SETARCH make -s -o showflags leaked-globals
 
