--- a/.travis.yml
+++ b/.travis.yml
@@ -542,7 +542,7 @@ script:
   # OK
   - $RUBY_PREFIX/bin/ruby ../spec/ruby/library/socket/socket/udp_server_loop_debug2_spec.rb
   # ?
-  - $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_debug3_spec.rb"
+  - strace -f $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_debug3_spec.rb"
   # Error
   - $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_debug_spec.rb"
   # - strace -f $SETARCH make test-spec MSPECOPT="-ff -V" SPECOPTS="../spec/ruby/library/socket/socket/udp_server_loop_spec.rb"
